--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "*": "prettier --ignore-unknown --write",
     "*.{ts,js,mjs}": "eslint --fix"
   },
+  "dependencies": {
+    "msw": "^0.0.0-fetch.rc-23",
+    "openapi-typescript-helpers": "^0.0.4"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
