--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "*.{ts,js,mjs}": "eslint --fix"
   },
   "dependencies": {
-    "msw": "^0.0.0-fetch.rc-23",
     "openapi-typescript-helpers": "^0.0.4"
+  },
+  "peerDependencies": {
+    "msw": "0.0.0-fetch.rc-23"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.5",
