--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,16 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/stylistic"
   ],
-  "rules": {}
+  "rules": {
+    "@typescript-eslint/no-empty-interface": [
+      "error",
+      {
+        // Often types are computed and expanded in Intellisense previews in editors,
+        // which can lead to verbose and heard to understand type signatures.
+        // Interface keep their name in previews, which can be used to clarify
+        // previews by using interfaces that just extend a type.
+        "allowSingleExtends": true
+      }
+    ]
+  }
 }
