--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "openapi-msw",
   "type": "module",
   "version": "0.0.0",
+  "private": true,
   "license": "MIT",
   "author": "Christoph Fricke <christoph@frickeonline.de>",
   "description": "Type-safe MSW wrapper for your OpenAPI schema.",
@@ -37,6 +38,8 @@
     "msw": "0.0.0-fetch.rc-23"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.8",
+    "@changesets/cli": "^2.26.2",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "@vitest/coverage-v8": "^0.34.6",
