--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,7 @@ jobs:
         uses: changesets/action@v1
         with:
           publish: npm run release
+          version: npm run version
           commit: "[ci] release"
           title: "[ci] release"
         env:
