--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,8 @@
-.changeset/*.md
 coverage
 dist
 node_modules
+
+# GitHub interprets "proseWrap" as a new line, which destroys the layout in
+# GitHub release notes, as they are created from the CHANGELOG.md entry.
+.changeset/*.md
+CHANGELOG.md
