--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,7 +2,9 @@
   "$schema": "https://json.schemastore.org/tsconfig.json",
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "declaration": true,
+    "sourceMap": true
   },
   "include": ["src", "exports"],
   "exclude": ["**/*.test.*"]
