chore: fix proseWrap in changelog files

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,12 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc.json",
-  "proseWrap": "always"
+  "proseWrap": "always",
+  "overrides": [
+    {
+      "files": [".changeset/*.md", "CHANGELOG.md"],
+      "options": {
+        "proseWrap": "never"
+      }
+    }
+  ]
 }
