--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "build": "rimraf ./dist && tsc -p tsconfig.build.json",
     "format": "prettier --write .",
     "lint": "tsc --noEmit && eslint . && prettier -c .",
+    "generate": "openapi-typescript --redoc ./test/fixtures/.redocly.yml",
     "test": "vitest",
     "test:cov": "vitest --coverage",
     "version": "changeset version && npm i",
@@ -51,6 +52,7 @@
     "eslint": "^8.52.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
+    "openapi-typescript": "^7.0.0-next.2",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "typescript": "^5.2.2",
