--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
           cache: "npm"
       - name: Install Dependencies
         run: npm ci
+      - name: Generate Fixtures
+        run: npm run generate
       - name: Lint Project
         run: npm run lint
       - name: Run Tests
