--- a/test/fixtures/.redocly.yml
+++ b/test/fixtures/.redocly.yml
@@ -1,2 +1,8 @@
 extends:
   - recommended
+
+apis:
+  no-content:
+    root: ./no-content.api.yml
+    openapi-ts:
+      output: ./no-content.api.ts
