refactor: use expectTypeOf for type assertions

--- a/test/fixtures/path-fragments.api.yml
+++ b/test/fixtures/path-fragments.api.yml
@@ -44,6 +44,17 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Count"
+  /resource:
+    get:
+      summary: Get Resource
+      operationId: getResource
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Count"
 components:
   schemas:
     Resource:
