test(integration): add path for http methods tests

--- a/test/fixtures/.redocly.yml
+++ b/test/fixtures/.redocly.yml
@@ -2,6 +2,10 @@ extends:
   - recommended
 
 apis:
+  http-methods:
+    root: ./http-methods.api.yml
+    openapi-ts:
+      output: ./http-methods.api.ts
   no-content:
     root: ./no-content.api.yml
     openapi-ts:
