--- a/test/fixtures/.redocly.yml
+++ b/test/fixtures/.redocly.yml
@@ -18,3 +18,7 @@ apis:
     root: ./request-body.api.yml
     openapi-ts:
       output: ./request-body.api.ts
+  response-content:
+    root: ./response-content.api.yml
+    openapi-ts:
+      output: ./response-content.api.ts
