--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "format": "prettier --write .",
     "lint": "tsc --noEmit && eslint . && prettier -c .",
     "generate": "openapi-typescript --redoc ./test/fixtures/.redocly.yml",
-    "test": "vitest",
+    "test:unit": "TEST_SUITE=unit vitest",
+    "test:int": "TEST_SUITE=integration vitest --typecheck",
     "test:cov": "vitest --coverage",
     "version": "changeset version && npm i",
     "release": "changeset publish"
@@ -48,7 +49,6 @@
     "@changesets/cli": "^2.26.2",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
-    "@vitest/coverage-v8": "^0.34.6",
     "eslint": "^8.52.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
@@ -56,6 +56,6 @@
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "typescript": "^5.2.2",
-    "vitest": "^0.34.6"
+    "vitest": "^1.0.0-beta.4"
   }
 }
