--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "prepare": "husky install",
     "build": "rimraf ./dist && tsc -p tsconfig.build.json",
     "format": "prettier --write .",
-    "lint": "tsc --noEmit && eslint . && prettier -c .",
-    "test": "vitest",
-    "test:cov": "vitest --coverage",
+    "lint": "eslint . && prettier -c .",
+    "generate": "openapi-typescript --redoc ./test/fixtures/.redocly.yml",
+    "test:unit": "TEST_SUITE=unit vitest",
+    "test:int": "TEST_SUITE=integration vitest --typecheck",
     "version": "changeset version && npm i",
     "release": "changeset publish"
   },
@@ -47,13 +48,14 @@
     "@changesets/cli": "^2.26.2",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
-    "@vitest/coverage-v8": "^0.34.6",
+    "@vitest/coverage-v8": "^1.0.0-beta.4",
     "eslint": "^8.52.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
+    "openapi-typescript": "^7.0.0-next.2",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "typescript": "^5.2.2",
-    "vitest": "^0.34.6"
+    "vitest": "^1.0.0-beta.4"
   }
 }
