chore: add project specific VS Code settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "cSpell.words": ["openapi"]
+  "cSpell.words": ["openapi", "typecheck", "redoc", "redocly"],
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
