--- a/package.json
+++ b/package.json
@@ -38,24 +38,28 @@
     "*.{ts,js,mjs}": "eslint --fix"
   },
   "dependencies": {
-    "openapi-typescript-helpers": "^0.0.4"
+    "openapi-typescript-helpers": "^0.0.6"
   },
   "peerDependencies": {
     "msw": "^2.0.0"
   },
   "devDependencies": {
-    "@changesets/changelog-github": "^0.4.8",
-    "@changesets/cli": "^2.26.2",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
-    "@vitest/coverage-v8": "^1.0.0-beta.4",
-    "eslint": "^8.52.0",
+    "@changesets/changelog-github": "^0.5.0",
+    "@changesets/cli": "^2.27.1",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "eslint": "^8.56.0",
     "husky": "^8.0.3",
-    "lint-staged": "^15.0.2",
-    "openapi-typescript": "^7.0.0-next.2",
-    "prettier": "^3.0.3",
+    "lint-staged": "^15.2.0",
+    "openapi-typescript": "^7.0.0-next.5",
+    "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
-    "typescript": "^5.2.2",
-    "vitest": "^1.0.0-beta.4"
+    "typescript": "^5.3.3",
+    "vitest": "^1.0.4"
+  },
+  "overrides": {
+    "msw": {
+      "typescript": "$typescript"
+    }
   }
 }
