feat: add query-params info based on the search-params API

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
     "allowUnreachableCode": false,
+    "exactOptionalPropertyTypes": true,
 
     /* Completeness */
     "skipDefaultLibCheck": true,
