chore: add prettier-plugin-organize-imports

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc.json",
+  "plugins": ["prettier-plugin-organize-imports"],
   "proseWrap": "always",
   "overrides": [
     {
