--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lint-staged": "^15.2.0",
     "openapi-typescript": "^7.0.0-next.5",
     "prettier": "^3.1.1",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3",
     "vitest": "^1.0.4"
