feat(response): prevent calling methods when their response type is not allowed

--- a/test/fixtures/response-content.api.yml
+++ b/test/fixtures/response-content.api.yml
@@ -20,6 +20,8 @@ paths:
               schema:
                 type: string
                 enum: ["Hello", "Goodbye"]
+        204:
+          description: NoContent
         418:
           description: Error
           content:
