--- a/package.json
+++ b/package.json
@@ -46,9 +46,7 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.2",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
-    "eslint": "^8.56.0",
+    "eslint": "^9.3.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "openapi-typescript": "^7.0.0-next.7",
@@ -56,6 +54,7 @@
     "prettier-plugin-organize-imports": "^3.2.4",
     "rimraf": "^5.0.7",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^8.0.0-alpha.13",
     "vitest": "^1.6.0"
   },
   "overrides": {
