--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "rimraf ./dist && tsc -p tsconfig.build.json",
     "format": "prettier --write .",
     "lint": "eslint . && prettier -c .",
-    "generate": "openapi-typescript --redoc ./test/fixtures/.redocly.yml",
+    "generate": "openapi-typescript -c ./test/fixtures/.redocly.yml",
     "test:unit": "TEST_SUITE=unit vitest",
     "test:int": "TEST_SUITE=integration vitest --typecheck",
     "version": "changeset version && npm i",
