--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "rimraf ./dist && tsc -p tsconfig.build.json",
     "format": "prettier --write .",
     "lint": "eslint . && prettier -c .",
-    "generate": "openapi-typescript --redoc ./test/fixtures/.redocly.yml",
+    "generate": "openapi-typescript -c ./test/fixtures/.redocly.yml",
     "test:unit": "TEST_SUITE=unit vitest",
     "test:int": "TEST_SUITE=integration vitest --typecheck",
     "version": "changeset version && npm i",
@@ -38,25 +38,24 @@
     "*.{ts,js,mjs}": "eslint --fix"
   },
   "dependencies": {
-    "openapi-typescript-helpers": "^0.0.7"
+    "openapi-typescript-helpers": "^0.0.8"
   },
   "peerDependencies": {
     "msw": "^2.0.0"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.1",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
-    "eslint": "^8.56.0",
+    "@changesets/cli": "^2.27.2",
+    "eslint": "^9.3.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
-    "openapi-typescript": "^7.0.0-next.7",
+    "openapi-typescript": "^7.0.0-next.11",
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
-    "rimraf": "^5.0.5",
-    "typescript": "^5.3.3",
-    "vitest": "^1.2.2"
+    "rimraf": "^5.0.7",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^8.0.0-alpha.13",
+    "vitest": "^1.6.0"
   },
   "overrides": {
     "msw": {
