--- a/package.json
+++ b/package.json
@@ -45,16 +45,16 @@
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.2",
+    "@changesets/cli": "^2.27.3",
     "eslint": "^9.3.0",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "openapi-typescript": "^7.0.0-next.11",
+    "lint-staged": "^15.2.5",
+    "openapi-typescript": "^7.0.0-rc.0",
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
     "rimraf": "^5.0.7",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^8.0.0-alpha.13",
+    "typescript-eslint": "^8.0.0-alpha.16",
     "vitest": "^1.6.0"
   },
   "overrides": {
