--- a/package.json
+++ b/package.json
@@ -46,23 +46,23 @@
     "*.{ts,js,mjs}": "eslint --fix"
   },
   "dependencies": {
-    "openapi-typescript-helpers": "^0.0.8"
+    "openapi-typescript-helpers": "0.0.8"
   },
   "peerDependencies": {
     "msw": "^2.0.0"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.3",
-    "eslint": "^9.3.0",
+    "@changesets/cli": "^2.27.5",
+    "eslint": "^9.5.0",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.5",
-    "openapi-typescript": "^7.0.0-rc.0",
-    "prettier": "^3.2.5",
+    "lint-staged": "^15.2.7",
+    "openapi-typescript": "^7.0.0",
+    "prettier": "^3.3.2",
     "prettier-plugin-organize-imports": "^3.2.4",
     "rimraf": "^5.0.7",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^8.0.0-alpha.16",
+    "typescript": "^5.5.2",
+    "typescript-eslint": "^8.0.0-alpha.30",
     "vitest": "^1.6.0"
   },
   "overrides": {
