--- a/package.json
+++ b/package.json
@@ -53,17 +53,17 @@
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.5",
-    "eslint": "^9.5.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
-    "openapi-typescript": "^7.0.0",
-    "prettier": "^3.3.2",
-    "prettier-plugin-organize-imports": "^3.2.4",
-    "rimraf": "^5.0.7",
-    "typescript": "^5.5.2",
-    "typescript-eslint": "^8.0.0-alpha.30",
-    "vitest": "^1.6.0"
+    "@changesets/cli": "^2.27.7",
+    "eslint": "^9.8.0",
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.8",
+    "openapi-typescript": "^7.3.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.0.0",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.1",
+    "vitest": "^2.0.5"
   },
   "overrides": {
     "msw": {
