--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build:cjs": "rimraf ./cjs && tsc -p tsconfig.cjs.json && echo '{\"type\":\"commonjs\"}' > ./cjs/package.json",
     "format": "prettier --write .",
     "lint": "eslint . && prettier -c .",
-    "generate": "openapi-typescript -c ./test/fixtures/.redocly.yml",
+    "generate": "openapi-typescript -c ./test/fixtures/.redocly.yml --enum --additional-properties",
     "test:unit": "TEST_SUITE=unit vitest",
     "test:int": "TEST_SUITE=integration vitest --typecheck",
     "version": "changeset version && npm i",
@@ -46,17 +46,19 @@
     "*.{ts,js,mjs}": "eslint --fix"
   },
   "dependencies": {
+    "axios-mock-adapter": "^2.0.0",
     "openapi-typescript-helpers": "^0.0.9",
-    "qs": "^6.12.3"
+    "qs": "^6.12.3",
+    "taxios": "^0.1.2"
   },
   "peerDependencies": {
-    "msw": "^2.0.0"
+    "msw": "^2.3.4"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.5",
     "@types/qs": "^6.9.15",
-    "axios": "^1.7.2",
+    "axios": "^1.7.3",
     "eslint": "^9.5.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
@@ -67,7 +69,7 @@
     "rimraf": "^5.0.7",
     "ts-pattern": "^5.2.0",
     "tsx": "^4.16.2",
-    "type-fest": "^4.21.0",
+    "type-fest": "^4.23.0",
     "typescript": "5.3",
     "typescript-eslint": "^8.0.0-alpha.30",
     "vitest": "^1.6.0"
