--- a/package.json
+++ b/package.json
@@ -46,28 +46,30 @@
     "*.{ts,js,mjs}": "eslint --fix"
   },
   "dependencies": {
-    "axios": "^1.7.3",
-    "qs": "^6.12.3"
+    "axios": "1.7.4",
+    "qs": "6.12.3",
+    "query-string": "9.1.0"
   },
   "devDependencies": {
-    "axios-mock-adapter": "^2.0.0",
-    "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.5",
-    "@types/qs": "^6.9.15",
-    "eslint": "^9.5.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
-    "openapi-fetch": "^0.10.2",
-    "openapi-typescript": "^7.0.0",
-    "prettier": "^3.3.2",
-    "prettier-plugin-organize-imports": "^3.2.4",
-    "rimraf": "^5.0.7",
-    "ts-pattern": "^5.2.0",
-    "tsx": "^4.16.2",
-    "type-fest": "^4.23.0",
+    "@changesets/changelog-github": "0.5.0",
+    "@changesets/cli": "2.27.5",
+    "@eslint/js": "9.5.0",
+    "@types/qs": "6.9.15",
+    "axios-mock-adapter": "2.0.0",
+    "eslint": "9.5.0",
+    "husky": "9.0.11",
+    "lint-staged": "15.2.7",
+    "openapi-fetch": "0.10.2",
+    "openapi-typescript": "7.0.0",
+    "prettier": "3.3.2",
+    "prettier-plugin-organize-imports": "3.2.4",
+    "rimraf": "5.0.7",
+    "ts-pattern": "5.2.0",
+    "tsx": "4.16.2",
+    "type-fest": "4.23.0",
     "typescript": "5.3",
-    "typescript-eslint": "^8.0.0-alpha.30",
-    "vitest": "^1.6.0"
+    "typescript-eslint": "8.0.0-alpha.30",
+    "vitest": "1.6.0"
   },
   "overrides": {
     "msw": {
