--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "format": "prettier --write .",
     "lint": "eslint . && prettier -c .",
     "generate": "openapi-typescript -c ./test/fixtures/.redocly.yml --enum --additional-properties",
-    "test:unit": "TEST_SUITE=unit vitest",
-    "test:int": "TEST_SUITE=integration vitest --typecheck",
+    "test:unit": "cross-env TEST_SUITE=unit vitest",
+    "test:int": "cross-env TEST_SUITE=integration vitest --typecheck",
     "version": "changeset version && npm i",
     "release": "changeset publish"
   },
@@ -56,6 +56,7 @@
     "@eslint/js": "9.5.0",
     "@types/qs": "6.9.15",
     "axios-mock-adapter": "2.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "9.5.0",
     "husky": "9.0.11",
     "lint-staged": "15.2.7",
