--- a/package.json
+++ b/package.json
@@ -61,6 +61,11 @@
     "axios": "1.7.4",
     "query-string": "9.1.0"
   },
+  "peerDependencies": {
+    "axios": ">=1.7.4",
+    "typescript": ">=5.3.0",
+    "node": ">=16.20.2"
+  },
   "devDependencies": {
     "@changesets/changelog-github": "0.5.0",
     "@changesets/cli": "2.27.5",
@@ -77,7 +82,8 @@
     "tsx": "4.16.2",
     "typescript": "5.3",
     "typescript-eslint": "8.0.0-alpha.30",
-    "vitest": "1.6.0"
+    "vitest": "1.6.0",
+    "rimraf": "5.0.7"
   },
   "overrides": {
     "msw": {
