--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "format": "prettier --write .",
     "lint": "eslint . && prettier -c .",
     "prettier:fix": "prettier -w .",
-    "generate": "openapi-typescript -c ./test/fixtures/.redocly.yml --enum --additional-properties",
+    "generate": "openapi-typescript -c ./test/fixtures/.redocly.yml --enum",
     "test:unit": "cross-env TEST_SUITE=unit vitest",
     "test:int": "cross-env TEST_SUITE=integration vitest --typecheck",
     "version": "changeset version && npm i",
