--- a/test/fixtures/request-body.api.yml
+++ b/test/fixtures/request-body.api.yml
@@ -65,6 +65,19 @@ paths:
       responses:
         204:
           description: NoContent
+  /special-json:
+    post:
+      summary: Get Special JSON Response
+      operationId: getSpecialJSON
+      requestBody:
+        required: true
+        content:
+          application/ld+json:
+            schema:
+              $ref: "#/components/schemas/NewResource"
+      responses:
+        204:
+          description: NoContent
 components:
   schemas:
     Resource:
