chore: fix wording in test API spec

--- a/test/fixtures/request-body.api.yml
+++ b/test/fixtures/request-body.api.yml
@@ -67,8 +67,8 @@ paths:
           description: NoContent
   /special-json:
     post:
-      summary: Get Special JSON Response
-      operationId: getSpecialJSON
+      summary: Create for Special JSON
+      operationId: postSpecialJSON
       requestBody:
         required: true
         content:
