--- a/.github/workflows/compatibility-check.yml
+++ b/.github/workflows/compatibility-check.yml
@@ -1,15 +1,15 @@
-name: ci
+name: compatibility-check
 
 on:
-  push:
-    branches: [main]
-  pull_request:
+  schedule:
+    - cron: "21 12 * * 5"
+  workflow_dispatch:
 
 env:
   CI: true
 
 jobs:
-  build:
+  check:
     runs-on: macos-latest
     steps:
       - name: Checkout
@@ -21,12 +21,10 @@ jobs:
           cache: "npm"
       - name: Install Dependencies
         run: npm ci
-      - name: Lint Project
-        run: npm run lint
-      - name: Run Unit Tests
-        run: npm run test:unit
       - name: Build Package
         run: npm run build
+      - name: Install latest MSW and OpenAPI-TS versions
+        run: npm install msw@latest openapi-typescript@latest
       - name: Generate Test Fixtures
         run: npm run generate
       - name: Run Integration Tests
