--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "format": "prettier --write .",
     "lint": "eslint . && prettier -c .",
     "generate": "openapi-typescript -c ./test/fixtures/.redocly.yml",
-    "test:unit": "TEST_SUITE=unit vitest",
-    "test:int": "TEST_SUITE=integration vitest --typecheck",
+    "test:unit": "vitest --project=unit",
+    "test:int": "vitest --project=integration",
     "version": "changeset version && npm i",
     "release": "changeset publish"
   },
@@ -45,16 +45,16 @@
     "msw": "^2.7.0"
   },
   "devDependencies": {
-    "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.12",
-    "eslint": "^9.19.0",
-    "lefthook": "^1.10.10",
-    "openapi-typescript": "^7.6.0",
-    "prettier": "^3.4.2",
+    "@changesets/changelog-github": "^0.5.1",
+    "@changesets/cli": "^2.28.1",
+    "eslint": "^9.22.0",
+    "lefthook": "^1.11.3",
+    "openapi-typescript": "^7.6.1",
+    "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "rimraf": "^6.0.1",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.21.0",
-    "vitest": "^3.0.4"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1",
+    "vitest": "^3.0.8"
   }
 }
