fix: Fix no required body in types

--- a/test/fixtures/example.api.yml
+++ b/test/fixtures/example.api.yml
@@ -105,7 +105,7 @@ paths:
           application/x-www-form-urlencoded:
             schema:
               $ref: "#/components/schemas/Pet"
-        required: true
+        required: false
       responses:
         "200":
           description: Successful operation
