--- a/package.json
+++ b/package.json
@@ -8,31 +8,20 @@
   "description": "Tiny, type-safe wrapper around MSW for type inference from OpenAPI schemas.",
   "repository": "github:christoph-fricke/openapi-msw",
   "files": [
-    "cjs",
     "dist",
     "CHANGELOG.md",
     "README.md",
     "LICENSE"
   ],
-  "sideEffects": false,
-  "types": "./dist/exports/main.d.ts",
-  "main": "./cjs/exports/main.js",
-  "module": "./dist/exports/main.js",
   "exports": {
     ".": {
-      "types": {
-        "import": "./dist/exports/main.d.ts",
-        "require": "./cjs/exports/main.d.ts"
-      },
-      "import": "./dist/exports/main.js",
-      "require": "./cjs/exports/main.js"
+      "types": "./dist/exports/main.d.ts",
+      "default": "./dist/exports/main.js"
     }
   },
   "scripts": {
     "prepare": "lefthook install",
-    "build": "npm run build:esm && npm run build:cjs",
-    "build:esm": "rm -rf ./dist && tsc -p tsconfig.build.json",
-    "build:cjs": "rm -rf ./cjs && tsc -p tsconfig.cjs.json && echo '{\"type\":\"commonjs\"}' > ./cjs/package.json",
+    "build": "rm -rf ./dist && tsc -p tsconfig.build.json",
     "format": "prettier --write .",
     "lint": "eslint . && prettier -c .",
     "generate": "openapi-typescript -c ./test/fixtures/.redocly.yml",
