test: unify package test scripts into a single script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,9 @@ jobs:
         run: npm ci
       - name: Lint Project
         run: npm run lint
-      - name: Run Unit Tests
-        run: npm run test:unit
       - name: Build Package
         run: npm run build
       - name: Generate Test Fixtures
         run: npm run generate
-      - name: Run Integration Tests
-        run: npm run test:int
+      - name: Run Test Suite
+        run: npm run test
