--- a/.github/workflows/compatibility-check.yml
+++ b/.github/workflows/compatibility-check.yml
@@ -31,5 +31,5 @@ jobs:
         run: npm ls openapi-typescript
       - name: Generate Test Fixtures
         run: npm run generate
-      - name: Run Integration Tests
-        run: npm run test:int
+      - name: Run Test Suite
+        run: npm run test
