--- a/package.json
+++ b/package.json
@@ -23,13 +23,11 @@
     }
   },
   "scripts": {
-    "prepare": "lefthook install",
     "build": "rm -rf ./dist && tsc -p tsconfig.build.json",
     "format": "prettier --write .",
     "lint": "eslint . && prettier -c .",
+    "test": "vitest",
     "generate": "openapi-typescript -c ./test/fixtures/.redocly.yml",
-    "test:unit": "vitest --project=unit",
-    "test:int": "vitest --project=integration",
     "version": "changeset version && npm i",
     "release": "changeset publish"
   },
