--- a/package.json
+++ b/package.json
@@ -35,15 +35,16 @@
     "msw": "^2.10.5"
   },
   "devDependencies": {
-    "@changesets/changelog-github": "^0.5.1",
-    "@changesets/cli": "^2.29.5",
-    "eslint": "^9.33.0",
-    "lefthook": "^1.12.3",
-    "openapi-typescript": "^7.9.1",
-    "prettier": "^3.6.2",
-    "prettier-plugin-organize-imports": "^4.2.0",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.39.1",
-    "vitest": "^3.2.4"
+    "@changesets/changelog-github": "^0.5.2",
+    "@changesets/cli": "^2.29.8",
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9.39.2",
+    "lefthook": "^2.1.0",
+    "openapi-typescript": "^7.13.0",
+    "prettier": "^3.8.1",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.55.0",
+    "vitest": "^4.0.18"
   }
 }
